--- a/frontend/pages/globals.scss
+++ b/frontend/pages/globals.scss
@@ -1,15 +1,17 @@
 html,
 body,
 #__next {
-  height: 100%;
-  width: 100%;
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 #__next {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
