--- a/frontend/pages/globals.scss
+++ b/frontend/pages/globals.scss
@@ -15,3 +15,29 @@ body,
 * {
 	box-sizing: border-box;
 }
+
+.full {
+	width: 100%;
+	height: 100%;
+}
+
+.col {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	gap: 1.25rem;
+
+	& > * {
+		margin: 0px;
+	}
+}
+
+.col {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+
+	& > * {
+		margin: 0px;
+	}
+}
