--- a/frontend/pages/globals.scss
+++ b/frontend/pages/globals.scss
@@ -7,6 +7,11 @@ body,
 	padding: 0;
 }
 
+html {
+	font-family: sans-serif;
+	font-size: 16px;
+}
+
 #__next {
 	display: flex;
 	flex-direction: row;
