--- a/frontend/pages/globals.scss
+++ b/frontend/pages/globals.scss
@@ -3,8 +3,6 @@ body,
 #__next {
 	height: 100%;
 	width: 100%;
-	margin: 0;
-	padding: 0;
 }
 
 html {
@@ -19,6 +17,8 @@ html {
 
 * {
 	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 .full {
@@ -45,4 +45,14 @@ html {
 	& > * {
 		margin: 0px;
 	}
+}
+
+pre > code {
+	display: block;
+}
+
+code {
+	padding: 1rem;
+	border-radius: 0.5rem;
+	background-color: #e3e3e3;
 }
