--- a/toolkit/styles.css
+++ b/toolkit/styles.css
@@ -1,14 +1,15 @@
-.robin-bg-yellow { background-color: #FCBF49; }
-.robin-bg-red { background-color: #DC2626; }
-.robin-bg-dark-blue { background-color: #003049; }
-.robin-bg-light-blue { background-color: #006AA3 }
+.robin-bg-dark-blue { background-color: #222A68 }
+.robin-bg-dark-purple { background-color: #654597 }
+.robin-bg-light-blue { background-color: #574AE2 }
+.robin-bg-light-purple { background-color: #AB81CD }
+.robin-bg-red { background-color: #D62828; }
 
 .robin-text-white {
 	color: rgb(255 255 255);
 }
 
 .robin-rounded {
-	border-radius: 0.25rem;
+	border-radius: .25rem;
 }
 
 .robin-border-white {
