--- a/frontend/pages/globals.scss
+++ b/frontend/pages/globals.scss
@@ -1,8 +1,12 @@
+@import '../styles/variables';
+
 html,
 body,
 #__next {
 	height: 100%;
 	width: 100%;
+
+	background-color: $dark-purple;
 }
 
 html {
