--- a/toolkit/src/styles.scss
+++ b/toolkit/src/styles.scss
@@ -2,35 +2,23 @@
 
 :root {
     @each $name, $value in $colors {
-        --color-#{$name}: #{$value};
+        --robin-color-#{$name}: #{$value};
     }
+
+    --robin-border-radius: .25rem;
 }
 
 @each $name, $value in $colors {
     .robin-bg-#{$name} {
-        background-color: var(--color-#{$name});
+        background-color: var(--robin-color-#{$name});
     }
     .robin-text-#{$name} {
-        color: var(--color-#{$name});
+        color: var(--robin-color-#{$name});
     }
 }
 
 .robin-rounded {
-	border-radius: .25rem;
-}
-
-.robin-border {
-	border-width: 2px;
-    border-style: solid;
-}
-
-.robin-text-bold {
-	font-weight: 700;
-}
-
-.robin-text-xl {
-	font-size: 1.25rem;
-	line-height: 1.75rem;
+	border-radius: var(--robin-border-radius);
 }
 
 .robin-pad {
