--- a/frontend/components/AppToolbar.module.scss
+++ b/frontend/components/AppToolbar.module.scss
@@ -15,7 +15,7 @@
 .toolbarIcons {
 	display: flex;
 	align-items: center;
-	justify-content: end;
+	justify-content: flex-end;
 }
 
 .toolbarButton {
