--- a/frontend/components/AppToolbar.module.scss
+++ b/frontend/components/AppToolbar.module.scss
@@ -1,8 +1,9 @@
 @import '../styles/variables';
 
 .toolbar {
-	margin: 0.5rem;
 	padding: 0.5rem;
+	margin: 1.25rem;
+	margin-bottom: 0;
 
 	border-radius: 0.25rem;
 	background: $dark-blue;
