--- a/example/my-ext/ext.scss
+++ b/example/my-ext/ext.scss
@@ -1,3 +1,21 @@
-body {
+html,
+body,
+div#root {
+	height: 100%;
 	background: orange;
+}
+
+.full {
+	height: 100%;
+	width: 100%;
+}
+
+.col {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+
+	& > * {
+		margin: 0px;
+	}
 }
